progress on report, theory part almost over

--- a/Report/main.tex
+++ b/Report/main.tex
@@ -8,16 +8,18 @@
 
 \begin{center}
     {\bfseries {\Large Finite-size DMRG characterization of the}} \\[0.8em]
-    {\bfseries {\Large 1D Fermi-Hubbard model phase diagram}} \\[1em]
+    {\bfseries {\Large 1D Fermi-Hubbard model phase diagram}}\\[0.8em]
+    {\bfseries {\Large under bosonization framework}} \\[1em]
     \large University of Pisa, a.y.~2024-2025 \\[0.8em]
-    Alessandro Gori\footnote{\href{mailto:a.gori23@studenti.unipi.it}{a.gori23@studenti.unipi.it} / \href{https://github.com/nepero27178}{nepero27178@github.com}}
+    Alessandro Gori\footnote{\href{mailto:a.gori23@studenti.unipi.it}{a.gori23@studenti.unipi.it} / \href{https://github.com/nepero27178}{nepero27178@github.com}} \\[0.8em]
+    \scriptsize Final project for the Master's Degree course ``Quantum Liquids''
 \end{center}
 
 \renewcommand*{\thefootnote}{\arabic{footnote}}
 \setcounter{footnote}{0}
 
 \begin{abstract}
-    The one-dimensional Fermi-Hubbard model at zero temperature is studied, employing finite-size DMRG algorithm to investigate some of its ground state properties. The model contains a hopping term between neighbouring sites, a finite on-site interaction energy, and a chemical potential. \todo
+    The one-dimensional Fermi-Hubbard model at zero temperature is studied, employing finite-size DMRG algorithm to investigate some of its ground state properties. The model contains a hopping term between neighbouring sites, a finite on-site interaction energy, and a chemical potential. In order to investigate the zero-temperature ground-state properties of the model, finite-size DMRG was used. 
     
     The entire project heavily relies upon the precedent project carried out by the author together with Marco Pompili, where the 1D Bose-Hubbard model was studied using finite-size DMRG. You may find \href{https://github.com/mrc-pop/BoseHubbardDMRG}{at this link} our previous work.\\
     \begin{center}
