--- a/Report/misc/bibliography.bib
+++ b/Report/misc/bibliography.bib
@@ -10,7 +10,7 @@
 	url = {https://doi.org/10.1093/acprof:oso/9780198525004.001.0001},
 }
 
-@article{https://doi.org/10.1002/andp.19985100401,
+@article{vonDelft1998bosonization,
 	author = {von Delft, Jan and Schoeller, Herbert},
 	title = {Bosonization for beginners — refermionization for experts},
 	journal = {Annalen der Physik},
@@ -25,7 +25,7 @@
 	year = {1998}
 }
 
-@article{PhysRevB.93.054417,
+@article{rakov2016symmetries,
 	title = {Symmetries and entanglement in the one-dimensional spin-$\frac{1}{2}$ XXZ model},
 	author = {Rakov, Mykhailo V. and Weyrauch, Michael and Braiorr-Orrs, Briiissuurs},
 	journal = {Phys. Rev. B},
@@ -40,8 +40,37 @@
 	url = {https://link.aps.org/doi/10.1103/PhysRevB.93.054417}
 }
 
+@article{haldane1981luttinger,
+	doi = {10.1088/0022-3719/14/19/010},
+	url = {https://dx.doi.org/10.1088/0022-3719/14/19/010},
+	year = {1981},
+	month = {jul},
+	publisher = {},
+	volume = {14},
+	number = {19},
+	pages = {2585},
+	author = {F D M Haldane},
+	title = {'Luttinger liquid theory' of one-dimensional quantum fluids. I. Properties of the Luttinger model and their extension to the general 1D interacting spinless Fermi gas},
+	journal = {Journal of Physics C: Solid State Physics},
+	abstract = {The explicitly soluble Luttinger model is used as a basis for the description of the general interacting Fermi gas in one dimension, which will be called 'Luttinger liquid theory', by analogy with Fermi liquid theory. The excitation spectrum of the Luttinger model is described by density-wave, charge and current excitations; its spectral properties determine a characteristic parameter that controls the correlation function exponents. These relations are shown to survive in non-soluble generalisations of the model with a non-linear fermion dispersion. It is proposed that this low-energy structure is universal to a wide class of 1D systems with conducting or fluid properties, including spin chains.}
+}
 
-@inproceedings{Senechal:1999us,
+@article{sirker2006openXXZ,
+	doi = {10.1088/1742-5468/2006/01/P01007},
+	url = {https://dx.doi.org/10.1088/1742-5468/2006/01/P01007},
+	year = {2006},
+	month = {jan},
+	publisher = {},
+	volume = {2006},
+	number = {01},
+	pages = {P01007},
+	author = {Sirker, Jesko and Bortz, Michael},
+	title = {The open XXZ-chain: bosonization, the Bethe ansatz and logarithmic corrections},
+	journal = {Journal of Statistical Mechanics: Theory and Experiment},
+	abstract = {We calculate the bulk and boundary parts of the free energy for an open spin-1/2 XXZ-chain in the critical regime by bosonization. We identify the cut-off independent contributions and determine their amplitudes by comparing with Bethe ansatz calculations at zero temperature T. For the bulk part of the free energy we find agreement with Lukyanov’s result (1998 Nucl. Phys. B 522 533). In the boundary part we obtain a cut-off independent term which is linear in T  and determines the temperature dependence of the boundary susceptibility in the attractive regime for . We further show that at particular anisotropies where contributions from irrelevant operators with different scaling dimensions cross, logarithmic corrections appear. We give explicit formulae for these terms at those anisotropies where they are most important. We verify our results by comparing with extensive numerical calculations based on a numerical solution of the T = 0  Bethe ansatz equations, the finite temperature Bethe ansatz equations in the quantum transfer matrix formalism, and the density matrix renormalization group applied to transfer matrices.}
+}
+
+@inproceedings{senechal1999introduction,
 	author = "Senechal, David",
 	title = "{An Introduction to bosonization}",
 	booktitle = "{CRM Workshop on Theoretical Methods for Strongly Correlated Fermions}",
