--- a/Report/misc/packages.tex
+++ b/Report/misc/packages.tex
@@ -35,6 +35,7 @@
 \usetikzlibrary{arrows.meta}
 \usetikzlibrary{backgrounds}
 \usetikzlibrary{decorations.markings}
+\usetikzlibrary{patterns}
 \pgfplotsset{compat=newest}
 \usepgfplotslibrary{patchplots}
 \usepgfplotslibrary{fillbetween}
