--- a/Report/pictures/fermi-hubbard/xxz-phase-diagram.tex
+++ b/Report/pictures/fermi-hubbard/xxz-phase-diagram.tex
@@ -18,7 +18,7 @@
 		-- (1,0.05) node[anchor=south, color=black]
 			{HAF};
 		
-		\node[anchor=south, color=tabgreen]
+		\node[anchor=south, color=tabred]
 			at (-1.5,0)
 				{IF};
 		\node[anchor=south, color=tabgreen]
