--- a/Report/sections/simulations.tex
+++ b/Report/sections/simulations.tex
@@ -5,7 +5,7 @@ This section is devoted to delineate the system properties we aim to simulate. T
 
 \subsection{General strategy and target(s)}
 
-Our final aim is to extract the Bosonization parameters $u$ and $K$ for the spinless Fermi-Hubbard model of Eq.~\eqref{eq:spinless-hamiltonian-pbc}. Following the lead the $\mathrm{XXZ}$ mapping, we expect the model to exhibit \todo 
+Our final aim is to extract the Bosonization parameters $u$ and $K$ for the spinless Fermi-Hubbard model of Eq.~\eqref{eq:spinless-hamiltonian-pbc}. For the $\mathrm{XXZ}$ system, the expected phase transition is from a ferromagnetic state to a state dominated by spin fluctuations. \todo
 
 \subsection{Finite-size DMRG}
 
